--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
     <div class="container">
         <h2>
-            Gerador de Numeros
+            Gerador de Números
         </h2>
         <div class="input-group">
             <div class="input-field">
-                <label for="min">Min:</label>
+                <label for="min">Mín:</label>
                 <input id="min" type="number" name="min">
             </div>
             <div class="input-field">
